tests/negative/neg_pr119a_select_public_channel.safe
package neg_pr119a_select_public_channel

   subtype message is integer (0 to 10)

   public channel msg_ch : message capacity 1

   task worker

      loop
         select
            when item : message from msg_ch
               delay 0.001

